--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to My Website!</h1>
-        <p>This is a simple example of a website hosted on GitHub Pages.</p>
-        <p>You can replace this content with your own.</p>
-        <p>Happy coding!</p>
+        <h1>Fuck You Jos</h1>
     </div>
 </body>
 </html>
